<resources>
    <string name="app_name">jmb_bms</string>
    <string name="Main_menu_chat">Chat</string>
    <string name="Main_menu_orders">Orders</string>
    <string name="Main_menu_Point_mng">Point Management</string>
    <string name="Main_menu_team">Team</string>
    <string name="Main_menu_settings">Settings</string>
    <string name="element_text">something</string>
    <string name="teamScHostString">host</string>
    <string name="teamsScPortString">port</string>
    <string name="teamScConShareBtnText">Connect and Share location</string>
    <string name="teamScConBtnText">Connect</string>
    <string name="teamScFillHeadlineString">Team server Information</string>
    <string name="TeamSCShare_location">Share location</string>
    <string name="TeamSCconnect_to_server">Connect to server</string>
    <string name="TeamSCedit">Edit</string>
    <string name="teamSCConnectingString">Connecting...</string>
</resources>