<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/teamScFillHeadlineString"
            android:layout_width="367dp"
            android:layout_height="70dp" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:autoSizeTextType="uniform"/>
    <EditText
            android:layout_width="288dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:text="@string/teamScHostString"
            android:ems="10"
            android:id="@+id/teamSCHostEdit"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="25dp"/>
    <EditText
            android:layout_width="288dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:text="@string/teamsScPortString"
            android:ems="10"
            android:id="@+id/teamSCPortEdit"
            app:layout_constraintTop_toBottomOf="@+id/teamSCHostEdit" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
    <Button
            android:text="@string/teamScConShareBtnText"
            android:layout_width="386dp"
            android:layout_height="59dp" android:id="@+id/teamSCFillConShBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/teamSCFillConBtn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"/>
    <Button
            android:text="@string/teamScConBtnText"
            android:layout_width="381dp"
            android:layout_height="50dp" android:id="@+id/teamSCFillConBtn"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="10dp"/>
    <TextView
            android:layout_width="369dp"
            android:layout_height="56dp" android:id="@+id/teamSCFillErr"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/teamSCFillConBtn"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="30dp"
            android:textColor="#E60B0B"/>

</androidx.constraintlayout.widget.ConstraintLayout>