<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:layout_width="313dp"
            android:layout_height="58dp" android:id="@+id/teamSCHeadline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:autoSizeTextType="uniform"/>
    <TextView
            android:text=""
            android:layout_width="219dp"
            android:layout_height="34dp" android:id="@+id/teamSCHostTxt"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/teamSCHeadline"
            android:layout_marginTop="10dp" android:layout_marginStart="5dp" android:textSize="16sp"
            android:textAlignment="textStart"/>
    <TextView
            android:text=""
            android:layout_width="164dp"
            android:layout_height="37dp" android:id="@+id/teamSCPortTxt"
            app:layout_constraintTop_toBottomOf="@+id/teamSCHeadline"
            android:layout_marginTop="10dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
            android:textAlignment="textStart" android:textSize="16sp"/>
    <Button
            android:text="@string/TeamSCconnect_to_server"
            android:layout_width="387dp"
            android:layout_height="51dp" android:id="@+id/teamSCConnectBtn"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.476" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp"/>
    <Button
            android:text="@string/TeamSCedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/teamSCEditConfBtn"
            app:layout_constraintStart_toEndOf="@+id/teamSCHeadline" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="6dp"
            app:layout_constraintBottom_toTopOf="@+id/teamSCPortTxt"/>
    <Switch
            android:text="@string/TeamSCShare_location"
            android:layout_width="186dp"
            android:layout_height="56dp" android:id="@+id/teamSCShareLocSwitch"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/teamSCHostTxt"
            android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>